--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cohere-ai": "^6.0.0",
+    "eslint-config-next": "^15.0.2",
     "framer-motion": "^11.11.9",
     "gray-matter": "^4.0.3",
     "langchain": "^0.3.4",
@@ -45,6 +46,7 @@
     "next": "^15.0.2",
     "next-themes": "^0.3.0",
     "openai": "^4.68.1",
+    "packageManager": "pnpm@7.5.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
@@ -69,10 +71,12 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
