--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npm run generate && next build",
+    "build": "pnpm generate && next build",
     "generate": "npx ts-node ./scripts/generate.ts",
     "start": "next start",
     "lint": "next lint"
@@ -26,11 +26,7 @@
     "@sendgrid/mail": "^8.1.4",
     "@supabase/postgrest-js": "^1.16.3",
     "@supabase/supabase-js": "^2.45.6",
-    "@types/aws-sdk": "^2.7.0",
     "@types/mdx": "^2.0.13",
-    "@types/react-icons": "^3.0.0",
-    "@types/redis": "^4.0.11",
-    "@types/sass": "^1.45.0",
     "@upstash/redis": "^1.34.3",
     "ai": "^3.4.18",
     "aws-sdk": "^2.1691.0",
@@ -46,7 +42,6 @@
     "next": "^15.0.2",
     "next-themes": "^0.3.0",
     "openai": "^4.68.1",
-    "packageManager": "pnpm@7.5.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
