--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "pnpm generate && next build",
-    "generate": "npx ts-node ./scripts/generate.ts",
+    "generate": "pnpm ts-node ./scripts/generate.ts",
     "start": "next start",
     "lint": "next lint"
   },
@@ -29,7 +29,6 @@
     "@types/mdx": "^2.0.13",
     "@upstash/redis": "^1.34.3",
     "ai": "^3.4.18",
-    "aws-sdk": "^2.1691.0",
     "chromadb": "^1.9.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -62,9 +61,11 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
+    "@types/dotenv": "^8.2.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "dotenv": "^16.4.5",
     "eslint": "^8",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
