--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "@aws-sdk/client-ses": "^3.675.0",
     "@datastax/astra-db-ts": "^1.5.0",
     "@huggingface/inference": "^2.8.1",
-    "@langchain/community": "^0.3.10",
-    "@langchain/core": "^0.3.15",
+    "@langchain/community": "^0.3.11",
+    "@langchain/core": "^0.3.17",
+    "@langchain/openai": "^0.3.11",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-hover-card": "^1.1.2",
@@ -36,7 +37,7 @@
     "eslint-config-next": "^15.0.2",
     "framer-motion": "^11.11.9",
     "gray-matter": "^4.0.3",
-    "langchain": "^0.3.4",
+    "langchain": "^0.3.5",
     "lucide-react": "^0.395.0",
     "next": "^15.0.2",
     "next-themes": "^0.3.0",
