--- a/vercel.json
+++ b/vercel.json
@@ -8,5 +8,6 @@
           "buildCommand": "pnpm run build"
         }
       }
-    ]
+    ],
+    "rewrites": [{ "source": "/(.*)", "destination": "/" }]
   }
