--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@sendgrid/mail": "^8.1.4",
     "@supabase/postgrest-js": "^1.16.3",
     "@supabase/supabase-js": "^2.45.6",
+    "@types/hls.js": "^1.0.0",
     "@types/mdx": "^2.0.13",
     "@upstash/redis": "^1.34.3",
     "ai": "^3.4.18",
@@ -37,6 +38,7 @@
     "eslint-config-next": "^15.0.2",
     "framer-motion": "^11.11.9",
     "gray-matter": "^4.0.3",
+    "hls.js": "^1.5.17",
     "langchain": "^0.3.5",
     "lucide-react": "^0.395.0",
     "next": "^15.0.2",
