--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cohere-ai": "^6.0.0",
+    "critters": "^0.0.20",
     "eslint-config-next": "^15.0.2",
     "framer-motion": "^11.11.9",
     "gray-matter": "^4.0.3",
@@ -68,6 +69,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
     "dotenv": "^16.4.5",
     "eslint": "^8",
     "postcss": "^8",
