--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
       "dom.iterable",
       "esnext"
     ],
+    "types": ["framer-motion"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
